# gov-mcp

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  Makefile  OPERATIONS.md  README.md  codex.config.example.json  codex.config.example.toml  codex.config.toml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml
contracts/: awards_last_updated.profile.json
docs/: agentic-semantic-workflow-experiment.md  agents-sdk-yolo-access-audit.md  architecture.md  engineering-approach.md  mcp-target-shape.md  pipeline.md  semantic-agent-operating-model.md  semantic-profile-v2.md
profiles/: README.md  manifest.json  shipping.json
profiles/v2__agency__awards__count/: profile.json  prompt.md
profiles/v2__agency__toptier_code/: profile.json  prompt.md
profiles/v2__agency__toptier_code__awards/: profile.json  prompt.md
profiles/v2__agency__toptier_code__awards__new__count/: profile.json  prompt.md
profiles/v2__agency__toptier_code__budget_function/: profile.json  prompt.md
profiles/v2__agency__toptier_code__budget_function__count/: profile.json  prompt.md
profiles/v2__agency__toptier_code__budgetary_resources/: profile.json  prompt.md
profiles/v2__agency__toptier_code__def_code/: profile.json  prompt.md
profiles/v2__agency__toptier_code__federal_account/: profile.json  prompt.md
profiles/v2__agency__toptier_code__federal_account__count/: prompt.md  (+1 more)
prompts/: endpoint_probe_pass2.md  endpoint_probe_prompt.md  final_pass.md
scripts/: README.md  full_pipeline.py  list_staged_slugs.py  stage_docs.py  worktree.py
src/: __init__.py
(+320 files in other folders)
